# pdfslicer

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .lsan.supp  CMakeLists.txt  HACKING.md  LICENSE-THIRD-PARTY  README.md  _config.yml  com.github.junrrein.PDFSlicer.json  com.junrrein.PDFSlicer.json  config.hpp.in  index.md  main.cpp  previewwindow.cpp  previewwindow.hpp  slicerdocument.cpp  slicerdocument.hpp  slicerview.cpp  slicerview.hpp  slicerwindow.cpp  slicerwindow.hpp
CTPL/: CMakeLists.txt
PDF-Writer/: CMakeLists.txt
ThreadPool/: CMakeLists.txt
_layouts/: default.html
build-aux/: boost-configure  boost.json  com.github.junrrein.PDFSlicer.json  gtkmm.json  poppler.json
cmake-modules/: GResource.cmake  GSettings.cmake  Translations.cmake  Uninstall.cmake  Utils.cmake  WindowsInstaller.cmake  WindowsQpdf.cmake  cmake_uninstall.cmake
data/: CMakeLists.txt  com.github.junrrein.PDFSlicer.appdata.xml.in  com.github.junrrein.PDFSlicer.desktop.in  com.github.junrrein.PDFSlicer.gschema.xml  com.junrrein.PDFSlicer.appdata.xml.in  com.junrrein.PDFSlicer.desktop.in  com.junrrein.PDFSlicer.json  pdfslicer.desktop  pdfslicer.desktop.in  pdfslicer.gresource.xml
data/icons/: CMakeLists.txt
data/ui/: shortcuts.ui
po/: CMakeLists.txt  ar.po  be.po  ca.po  com.github.junrrein.PDFSlicer.pot  com.junrrein.pdfslicer.pot  cs.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hy.po  it.po  ja.po  ko.po  kw.po  lt.po  lv.po  mi.po  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr_Cyrl.po  (+7 more)
po/extra/: ar.po  be.po  ca.po  ce.po  cs.po  de.po  el.po  eo.po  es.po  eu.po  extra.pot  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  it.po  ja.po  ko.po  ky.po  lt.po  lv.po  nb.po  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr_Cyrl.po  sr_Latn.po  sv.po  tr.po  zh_Hans.po
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.hpp  application.cpp  application.hpp  commandmanager.cpp  commandmanager.hpp  config.hpp.cmake  document.cpp  document.hpp  logger.cpp  logger.hpp  main.cpp  page.cpp  page.hpp  pdfslicer.rc  previewwindow.cpp  previewwindow.hpp  savefiledialog.cpp  savefiledialog.hpp  slicerdocument.cpp  slicerdocument.hpp  slicerview.cpp  slicerwindow.hpp  utils.cpp  utils.hpp  view.cpp  view.hpp  viewchild.cpp  viewchild.hpp  window.cpp  window.hpp  zoomlevel.cpp  zoomlevel.hpp
src/application/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.hpp  actionbar.cpp  actionbar.hpp  addfiledialog.cpp  addfiledialog.hpp  application.cpp  application.hpp  appmenu.cpp  appmenu.hpp  appwindow.cpp  appwindow.hpp  backgroundthread.cpp  backgroundthread.hpp  commandslot.cpp  commandslot.hpp  filechoosernative.cpp  filechoosernative.hpp  guicommand.cpp  guicommand.hpp  headerbar.cpp  headerbar.hpp  interactivepagewidget.cpp  interactivepagewidget.hpp  openfiledialog.cpp  openfiledialog.hpp  pagelabel.cpp  pagelabel.hpp  pagewidget.cpp  pagewidget.hpp  pdffilter.cpp  previewheaderbar.cpp  previewheaderbar.hpp  previewwindow.cpp  previewwindow.hpp  savefiledialog.cpp  savefiledialog.hpp  savingrevealer.cpp  savingrevealer.hpp  (+15 more)
src/backend/: CMakeLists.txt  command.cpp  command.hpp  commandmanager.cpp  commandmanager.hpp  config.cpp  config.hpp.in  document.cpp  document.hpp  documentsaver.cpp  documentsaver.hpp  fileutils.cpp  fileutils.hpp  page.cpp  page.hpp  pagerenderer.cpp  pagerenderer.hpp  pdfannotationswriter.cpp  pdfannotationswriter.hpp  pdfsaver.cpp  pdfsaver.hpp  tempfile.cpp  tempfile.hpp  tempfilepath.cpp  tempfilepath.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp  config.hpp.in
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/ui/: aboutdialog.cpp  actionbar.cpp  actionbar.hpp  application.cpp  appwindow.cpp  appwindow.hpp  documentrenderer.cpp  documentrenderer.hpp  editor.cpp  editor.hpp  filechoosernative.cpp  filechoosernative.hpp  headerbar.cpp  headerbar.hpp  interactivepagewidget.cpp  interactivepagewidget.hpp  openfiledialog.cpp  openfiledialog.hpp  pagewidget.cpp  pagewidget.hpp  previewwindow.cpp  previewwindow.hpp  savefiledialog.cpp  savefiledialog.hpp  savingrevealer.cpp  savingrevealer.hpp  utils.cpp  utils.hpp  view.cpp  view.hpp  viewchild.cpp  viewchild.hpp  welcomescreen.cpp  welcomescreen.hpp  window.cpp  window.hpp  zoomlevel.cpp  zoomlevelwithactions.cpp  zoomlevelwithactions.hpp
tests/: CMakeLists.txt  backend.command.cpp  backend.tempfile.cpp  command.addfile.cpp  command.addfiles.cpp  command.cpp  command.move.cpp  command.remove.cpp  common.hpp  document.addfile.cpp  document.addfiles.cpp  document.cpp  document.move.cpp  document.remove.cpp  main.cpp
ui/: pdfslicer.gresource.xml
