project(PDFHUMMUS)
cmake_minimum_required (VERSION 2.6)

set(USE_BUNDLED TRUE CACHE BOOL "Whether to use bundled libraries")

if(NOT USE_BUNDLED)
	find_package (JPEG REQUIRED)
	find_package (ZLIB REQUIRED)
	find_package (Freetype REQUIRED)
	find_package (PNG REQUIRED)

	ADD_SUBDIRECTORY(LibTiff)

	if (MINGW)
		ADD_SUBDIRECTORY(LibAesgm)
	else()
		FIND_PATH(LIBAESGM_INCLUDE_DIRS aescpp.h /usr/local/include/aes /usr/include/aes)
		FIND_LIBRARY(LIBAESGM_LDFLAGS NAMES aesgm PATHS /usr/local/lib${LIB_SUFFIX} /usr/lib${LIB_SUFFIX})
	endif()
else()
    ADD_SUBDIRECTORY(LibAesgm)
    if(NOT PDFHUMMUS_NO_DCT)
    ADD_SUBDIRECTORY(LibJpeg)
    endif(NOT PDFHUMMUS_NO_DCT)
    ADD_SUBDIRECTORY(ZLib)
    if(NOT PDFHUMMUS_NO_TIFF)
    ADD_SUBDIRECTORY(LibTiff)
    endif(NOT PDFHUMMUS_NO_TIFF)
    ADD_SUBDIRECTORY(FreeType)
    if(NOT PDFHUMMUS_NO_PNG)
    ADD_SUBDIRECTORY(LibPng)
    endif(NOT PDFHUMMUS_NO_PNG)
endif()

ADD_SUBDIRECTORY(PDFWriter)
